# mypa

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: models.py  store.py
app/integrations/: agentmail.py  calendar.py  telegram.py
app/llm/: claude_agent.py
app/schemas/: __init__.py  calendar.py  email.py  telegram.py  tools.py
app/services/: reliability.py  scheduler.py  thread_state.py
app/web/: auth.py  routes.py
docs/: README.md  agentmail.md  anthropic.md  environment.md  google-calendar.md  prerequisites.md  running.md  security-hardening.md  telegram.md  web-admin.md
templates/admin/: base.html  dashboard.html  dead_letters.html  login.html  pending_approvals.html  security_audit.html  settings.html  thread_detail.html  threads.html  tools.html  trusted_senders.html
tests/: test_agentmail.py  test_calendar.py  test_main.py  test_scheduler.py  test_store.py  test_telegram.py  test_web.py
